[FLINK-39803][e2e] Ignore jdk25 native access and deprecated method warnings